--- a/REST/src/main/resources/application.properties
+++ b/REST/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=REST
+spring.datasource.url=jdbc:postgresql://localhost:5432/twdb
+spring.datasource.username=tw
+spring.datasource.password=twpassword
+spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.defer-datasource-initialization=true
