Created base AbstractEntity and added the MeasurementUnit entity. Also updated data.sql to initialize the measurement_unit table.

--- a/REST/src/main/resources/application.properties
+++ b/REST/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/twdb
 spring.datasource.username=tw
 spring.datasource.password=twpassword
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.defer-datasource-initialization=true
+
+# Loading Initial Data
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
