--- a/REST/pom.xml
+++ b/REST/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.krzkuc1985</groupId>
+            <artifactId>DTO</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
