Added support for initializing DB from data.sql for tests

--- a/REST/src/test/resources/application.properties
+++ b/REST/src/test/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:h2:mem:twdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=tw
 spring.datasource.password=twpassword
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Loading Initial Data
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
