--- a/DTO/pom.xml
+++ b/DTO/pom.xml
@@ -13,7 +13,10 @@
     <name>${project.artifactId}-${project.version}</name>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
