--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.6.0</version>
+            </dependency>
+            <dependency>
                 <groupId>com.github.krzkuc1985</groupId>
                 <artifactId>DTO</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
