--- a/REST/src/test/resources/application.properties
+++ b/REST/src/test/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Loading Initial Data
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+# OpenAPI Configuration
+project.description=API for the TechWarehouse application, which supports the management of operations in a technical warehouse.\n\nSome useful links:\n\n- [TechWarehouse GitHub](https://github.com/krzkuc1985/TechWarehouse)
+project.name=TechWarehouse API
+project.version=@project.name@
